GNOME Bugzilla – Bug 689073
Fix clutter_actor_allocate_align_fill() with actors exactly between 2 pixels
Last modified: 2012-11-26 11:34:48 UTC
The attached patch fix a problem with allocation where the child actor is allocated by one pixel than its preferred width or height. That happens only when the actor width/height is an odd number.
Created attachment 229892 [details] [review] Patch v1
Review of attachment 229892 [details] [review]: looks good to me.
Pushed to master and 1.12.